thesis/livekit-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livekit-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: live.sehrmude.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livekit-livekit-server
                port:
                  number: 7880
    - host: turn.sehrmude.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livekit-livekit-server-turn
                port:
                  number: 443
  tls:
    - hosts:
        - "*.sehrmude.id.vn"
        - "live.sehrmude.id.vn"
        - sehrmude.id.vn
      secretName: sehrmude-wildcard-tls
